{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 22,
  "lineage": "414e6a77-dedd-37f2-5373-a7f10efdb3ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mysql_dispatcher_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f64c60b4f68c0c2c",
            "domain": "vpc",
            "id": "eipalloc-09bbd969c6f892df0",
            "instance": "i-0dd985584ea6ed325",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0509005a2a3623d19",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-54-144-220-155.compute-1.amazonaws.com",
            "public_ip": "54.144.220.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mysql_dispatcher",
            "aws_internet_gateway.mysql_gw",
            "aws_network_interface.mysql_dispatcher_ni",
            "aws_security_group.mysql_sg",
            "aws_subnet.mysql_sub1",
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_dispatcher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bf6dcdc9ab498ca",
            "arn": "arn:aws:ec2:us-east-1:898219459031:instance/i-0dd985584ea6ed325",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd985584ea6ed325",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "mysql_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0509005a2a3623d19"
              }
            ],
            "primary_network_interface_id": "eni-0509005a2a3623d19",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-54-211-18-16.compute-1.amazonaws.com",
            "public_ip": "54.211.18.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0695a953dda457635",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d31a436c17e91d1d",
            "tags": {
              "Name": "Mysql_Dispatcher"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06fa9f92b40c6367d"
            ]
          },
          "dependencies": [
            "aws_network_interface.mysql_dispatcher_ni",
            "aws_security_group.mysql_sg",
            "aws_subnet.mysql_sub1",
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mysql_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898219459031:internet-gateway/igw-0b5aecf1959aa9fbb",
            "id": "igw-0b5aecf1959aa9fbb",
            "owner_id": "898219459031",
            "tags": {
              "Name": "MYSQL_GW"
            },
            "vpc_id": "vpc-07b43d3421c91f705"
          },
          "dependencies": [
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mysql_dispatcher_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0509005a2a3623d19",
            "ipv6_address_count": 0,
            "mac_address": "12:4b:ab:26:3a:69",
            "private_dns_name": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "private_ips": [
              "10.0.1.177"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06fa9f92b40c6367d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d31a436c17e91d1d"
          },
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_subnet.mysql_sub1",
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mysql_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a7de97763fe04b7",
            "owner_id": "898219459031",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5aecf1959aa9fbb",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5aecf1959aa9fbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MYSQL_Route"
            },
            "vpc_id": "vpc-07b43d3421c91f705"
          },
          "dependencies": [
            "aws_internet_gateway.mysql_gw",
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mysql_sub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09787426254246855",
            "route_table_id": "rtb-07a7de97763fe04b7",
            "subnet_id": "subnet-0d31a436c17e91d1d"
          },
          "dependencies": [
            "aws_internet_gateway.mysql_gw",
            "aws_route_table.mysql_route",
            "aws_subnet.mysql_sub1",
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898219459031:security-group/sg-06fa9f92b40c6367d",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fa9f92b40c6367d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_traffic",
            "name_prefix": "",
            "owner_id": "898219459031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b43d3421c91f705"
          },
          "dependencies": [
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysql_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898219459031:subnet/subnet-0d31a436c17e91d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d31a436c17e91d1d",
            "map_public_ip_on_launch": true,
            "owner_id": "898219459031",
            "tags": {
              "Name": "MYSQL_subnet"
            },
            "vpc_id": "vpc-07b43d3421c91f705"
          },
          "dependencies": [
            "aws_vpc.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898219459031:vpc/vpc-07b43d3421c91f705",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c01d826db3fb14bc",
            "default_route_table_id": "rtb-0039211cebf16d958",
            "default_security_group_id": "sg-0f6a98a871795fdc6",
            "dhcp_options_id": "dopt-024d62b647dde6747",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07b43d3421c91f705",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0039211cebf16d958",
            "owner_id": "898219459031",
            "tags": {
              "Name": "MYSQL_VPC"
            }
          }
        }
      ]
    }
  ]
}